--- a/components/package.json
+++ b/components/package.json
@@ -7,8 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "moment": "^2.24.0",
     "react": "16.6.3",
-    "react-native": "0.58.6"
+    "react-native": "0.58.6",
+    "react-native-modal-datetime-picker": "^6.0.0",
+    "react-native-modal-picker": "^0.0.16"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
