--- a/components/package.json
+++ b/components/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.24.0",
     "react": "16.6.3",
     "react-native": "0.58.6",
+    "react-native-gesture-handler": "^1.1.0",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-modal-picker": "^0.0.16"
   },
