--- a/components/package.json
+++ b/components/package.json
@@ -10,10 +10,12 @@
     "moment": "^2.24.0",
     "react": "16.6.3",
     "react-native": "0.58.6",
+    "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-modal-picker": "^0.0.16",
-    "react-native-svg": "^9.3.5"
+    "react-native-svg": "^9.3.5",
+    "react-native-vector-icons": "^6.4.2"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
