--- a/components/package.json
+++ b/components/package.json
@@ -16,6 +16,7 @@
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-modal-picker": "^0.0.16",
     "react-native-svg": "^9.3.5",
+    "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.4.2"
   },
   "devDependencies": {
