--- a/components/package.json
+++ b/components/package.json
@@ -17,6 +17,7 @@
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-modal-picker": "^0.0.16",
     "react-native-share": "^1.1.3",
+    "react-native-snap-carousel": "^3.7.5",
     "react-native-svg": "^9.3.5",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.4.2"
